<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_name" translatable="true">Download</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadingapp_button_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_button_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="please_select">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="Status" >Status:</string>
    <string name="ok">Ok</string>
</resources>
